fix theme toggle positioning issue here i attempted to fix the theme toggle botton positioning by changing the units for position to px instead of vw,vh i also increased theme toggle button size on mobile

--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 
 .floating {
   position: fixed;
-  top: 85vh;
-  right: 5vw;
+  bottom: 30px;
+  right: 10px;
   z-index: 999;
   padding: 0 15px;
   cursor: pointer;
